<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NF33-detection-de-pas</string>
    <string name="action_settings">Settings</string>
    <string name="axis_x">X: </string>
    <string name="axis_y">Y: </string>
    <string name="axis_z">Z: </string>
    <string name="save">Save</string>
    <string name="steps_number">Nombre de pas : </string>
    <string name="reset">Reset</string>
    <string name="axis_1">1 Axe</string>
    <string name="axis_multi">Multi Axes</string>
    <string name="default_tv_axis">_</string>
    <string name="default_tv_steps_counter">0</string>
	<string name="limit">Limit</string>
	<string name="amplitude">Amplitude</string>
	
	<string name="title_activity_coordinate">CoordinateActivity</string>
	<string name="hello_world">Hello world!</string>
	<string name="cap">Cap value : </string>
    
    <string name="title_activity_cap">CapActivity</string>
    <string name="xValue">X value : </string>
    <string name="yValue">Y value : </string>
    <string name="zValue">Z value : </string>
    <string name="sensibilite">Sensibilité</string>
</resources>