<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tv_axis_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/axis_x" />

    <TextView
        android:id="@+id/tv_axis_y"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_axis_x"
        android:layout_below="@+id/tv_axis_x"
        android:layout_marginTop="14dp"
        android:text="@string/axis_y" />

    <TextView
        android:id="@+id/tv_axis_z"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_axis_x"
        android:layout_below="@+id/tv_axis_y"
        android:layout_marginTop="14dp"
        android:text="@string/axis_z" />

    <Button
        android:id="@+id/buttonLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_axis_z"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:text="@string/save" />

    <TextView
        android:id="@+id/textViewButtonLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/buttonLog"
        android:layout_below="@+id/buttonLog"
        android:text="" />

</RelativeLayout>